@@ -34,7 +34,6 @@ import com.cognifide.aemrules.java.checks.slingmodels.DefaultInjectionStrategyAn
 import com.cognifide.aemrules.java.checks.slingquery.SlingQueryImplicitStrategyCheck;
 import com.cognifide.aemrules.version.AemVersion;
 import com.cognifide.aemrules.version.VersionSupportChecker;
-import com.google.common.collect.ImmutableList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
@@ -49,8 +48,7 @@ public class JavaCheckClasses implements CheckRegistrar {
 
     public static final String REPOSITORY_NAME = "AEM Rules";
 
-    public static final List<Class<? extends JavaCheck>> CHECK_CLASSES
-        = ImmutableList.of(
+    public static final List<Class<? extends JavaCheck>> CHECK_CLASSES = List.of(
         AdministrativeAccessUsageCheck.class,
         AnnotationsConstantsCheck.class,
         ConstantsCheck.class,
